--- a/resources/css/partials_styles/font_styles.css
+++ b/resources/css/partials_styles/font_styles.css
@@ -1,9 +1,9 @@
 *, h1, h2, h3, h4, h5, p, div {
-    font-family: "Caveat", serif;
+    font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    color: #fdf0d5;
+    color: #fdf0d5; /* Color de la letra */
 }
 
 /*
