--- a/resources/css/partials_styles/footer_styles.css
+++ b/resources/css/partials_styles/footer_styles.css
@@ -1,15 +1,44 @@
 .body__footer {
-    min-height: 10vh;
-    background-color: #003049;
+    min-height: 15vh;
+    background-color: #003049; /* Fondo oscuro */
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    padding: 20px;
+    font-family: "Roboto", sans-serif; /* Fuente similar a Instagram */
+    color: #fdf0d5; /* Color de la letra */
 }
 
-.footer__div_logo {
-
+.footer__div_links,
+.footer__div_social {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
 }
 
-.footer__div_info {
+.footer__div_links ul,
+.footer__div_social a {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 15px;
+}
 
+.footer__div_links a,
+.footer__div_social a {
+    text-decoration: none;
+    color: #fdf0d5; /* Blanco */
+    font-size: 14px;
+    transition: color 0.3s ease;
+}
+
+.footer__div_links a:hover,
+.footer__div_social a:hover {
+    color: #fb8500; /* Color similar al de Instagram */
+}
+
+.footer__div_copyright {
+    font-size: 12px;
+    margin-top: 10px;
+    text-align: center;
 }
