--- a/resources/css/partials_styles/header_styles.css
+++ b/resources/css/partials_styles/header_styles.css
@@ -1,41 +1,44 @@
 .body__header {
     min-height: 10vh;
     height: 10vh;
-    background-color: #003049;
-
+    background-color: #003049; /* Fondo oscuro */
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    border-bottom: 2px solid black;
+    justify-content: space-between;
+    padding: 0 20px;
+    border-bottom: 1px solid #fb8500; /* Línea de separación estilo Instagram */
+}
+
+.header__div_logo {
+    color: #fdf0d5; /* Color de logo, blanco */
+    font-size: 1.8em;
+    font-weight: 700;
+    font-family: "Roboto", sans-serif; /* Fuente limpia y moderna */
 }
 
 .header__navigation {
-
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    column-gap: 2px;
-    background-color: black;
-    
-    height: 100%;
+    column-gap: 20px;
 }
 
 .navigation__a {
-    background-color: #003049;
-    height: 100%;
-    min-width: 5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 1em;
-    padding-right: 1em;
-
     text-decoration: none;
-    color: inherit;
-    transition: all .2s ease-in;
+    color: #fdf0d5; /* Blanco para los enlaces */
+    font-size: 1.1em;
+    font-weight: 500;
+    padding: 5px 15px;
+    border-radius: 5px;
+    transition: background-color 0.2s ease-in-out;
 }
 
 .navigation__a:hover {
-    background-color: #669bbc;
+    background-color: #fb8500; /* Color de hover estilo Instagram */
+    color: white;
 }
 
+.navigation__a i {
+    font-size: 1.5em;
+    margin-right: 8px;
+}
